--- a/requirements.txt
+++ b/requirements.txt
@@ -1,125 +1,176 @@
-accelerate
-aiohttp
-aiosignal
-annotated-types
-anyio
-attrs
-beautifulsoup4
-bs4
-certifi
-charset-normalizer
-click
-dataclasses-json
-Deprecated
-dirtyjson
-diskcache
-distro
-fastapi
-filelock
-frozenlist
-fsspec
-greenlet
-guidance
-h11
-html2text
-httpcore
-httpx
-huggingface-hub
-idna
-interegular
-Jinja2
-joblib
-llama-hub
-llama-index
-llama-index-agent-openai
-llama-index-cli
-llama-index-core
-llama-index-embeddings-huggingface
-llama-index-embeddings-openai
-llama-index-indices-managed-llama-cloud
-llama-index-legacy
-llama-index-llms-huggingface
-llama-index-llms-llama-cpp
-llama-index-llms-ollama
-llama-index-llms-openai
-llama-index-multi-modal-llms-openai
-llama-index-program-guidance
-llama-index-program-lmformatenforcer
-llama-index-program-openai
-llama-index-question-gen-openai
-llama-index-readers-file
-llama-index-readers-llama-parse
-llama-parse
-llama_cpp_python
-llamaindex-py-client
-lm-format-enforcer
-MarkupSafe
-marshmallow
-minijinja
-mpmath
-multidict
-mypy-extensions
-nest-asyncio
-networkx
-nltk
-numpy
-openai
-ordered-set
-packaging
-pandas
-pillow
-platformdirs
-protobuf
-psutil
-pyaml
-pydantic
-pydantic_core
-pydot
-pyformlang
-PyMuPDF
-PyMuPDFb
-pyparsing
-pypdf
-python-dateutil
-python-dotenv
-pytz
-PyYAML
-regex
-requests
-retrying
-safetensors
-scikit-learn
-scipy
-sentence-transformers
-six
-sniffio
-soupsieve
-SQLAlchemy
-starlette
-striprtf
-sympy
-tenacity
-threadpoolctl
-tiktoken
-tokenizers
-torch
-tqdm
-transformers
-typing-inspect
-typing_extensions
-tzdata
-urllib3
-uvicorn
-wrapt
-yarl
-datasets
-weaviate-client
-sentence-transformers
-PyPDF2
-python-dotenv
-jupyter
-langchain_core
-llama-index-embeddings-ollama
-langchain_text_splitters
-bm25s
-llama-index-vector-stores-weaviate
+accelerate==1.2.1
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.11
+aiosignal==1.3.2
+annotated-types==0.7.0
+anyio==4.7.0
+asttokens==3.0.0
+atlassian-python-api==3.41.16
+attrs==24.3.0
+Authlib==1.3.1
+beautifulsoup4==4.12.3
+bm25s==0.2.6
+bs4==0.0.2
+certifi==2024.12.14
+cffi==1.17.1
+charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
+comm==0.2.2
+cryptography==44.0.0
+dataclasses-json==0.6.7
+datasets==3.2.0
+debugpy==1.8.11
+decorator==5.1.1
+Deprecated==1.2.15
+dill==0.3.8
+dirtyjson==1.0.8
+diskcache==5.6.3
+distro==1.9.0
+executing==2.1.0
+fastapi==0.115.6
+filelock==3.16.1
+filetype==1.2.0
+frozenlist==1.5.0
+fsspec==2024.9.0
+greenlet==3.1.1
+grpcio==1.68.1
+grpcio-health-checking==1.68.1
+grpcio-tools==1.68.1
+guidance==0.1.16
+h11==0.14.0
+html2text==2024.2.26
+httpcore==1.0.7
+httpx==0.27.2
+huggingface-hub==0.23.5
+idna==3.10
+interegular==0.3.3
+ipykernel==6.29.5
+ipython==8.31.0
+jedi==0.19.2
+Jinja2==3.1.5
+jiter==0.8.2
+jmespath==1.0.1
+joblib==1.4.2
+jsonpatch==1.33
+jsonpointer==3.0.0
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+langchain-core==0.3.28
+langchain-ollama==0.2.2
+langchain-text-splitters==0.3.4
+langchain-weaviate==0.0.3
+langsmith==0.2.7
+llama-cloud==0.1.7
+llama-hub==0.0.45
+llama-index==0.12.8
+llama-index-agent-openai==0.4.1
+llama-index-cli==0.4.0
+llama-index-core==0.12.8
+llama-index-embeddings-huggingface==0.4.0
+llama-index-embeddings-ollama==0.5.0
+llama-index-embeddings-openai==0.3.1
+llama-index-indices-managed-llama-cloud==0.6.3
+llama-index-legacy==0.9.48.post4
+llama-index-llms-huggingface==0.4.1
+llama-index-llms-llama-cpp==0.3.0
+llama-index-llms-ollama==0.5.0
+llama-index-llms-openai==0.3.12
+llama-index-multi-modal-llms-openai==0.4.1
+llama-index-program-guidance==0.3.0
+llama-index-program-lmformatenforcer==0.3.0
+llama-index-program-openai==0.3.1
+llama-index-question-gen-openai==0.3.0
+llama-index-readers-file==0.4.1
+llama-index-readers-llama-parse==0.4.0
+llama-index-vector-stores-weaviate==1.3.1
+llama-parse==0.5.18
+llama_cpp_python==0.2.90
+llamaindex-py-client==0.1.19
+lm-format-enforcer==0.10.9
+MarkupSafe==3.0.2
+marshmallow==3.23.2
+matplotlib-inline==0.1.7
+minijinja==2.5.0
+mpmath==1.3.0
+multidict==6.1.0
+multiprocess==0.70.16
+mypy-extensions==1.0.0
+nest-asyncio==1.6.0
+networkx==3.4.2
+nltk==3.9.1
+numpy==1.26.4
+oauthlib==3.2.2
+ollama==0.4.4
+openai==1.58.1
+ordered-set==4.1.0
+orjson==3.10.13
+packaging==24.2
+pandas==2.2.3
+parso==0.8.4
+pillow==11.0.0
+platformdirs==4.3.6
+prompt_toolkit==3.0.48
+propcache==0.2.1
+protobuf==5.29.2
+psutil==6.1.1
+pure_eval==0.2.3
+pyaml==24.12.1
+pyarrow==18.1.0
+pycparser==2.22
+pydantic==2.10.4
+pydantic_core==2.27.2
+pydot==3.0.3
+pyformlang==1.0.10
+Pygments==2.18.0
+PyMuPDF==1.25.1
+PyMuPDFb==1.24.10
+pyparsing==3.2.0
+pypdf==5.1.0
+PyPDF2==3.0.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2024.2
+pywin32==308
+PyYAML==6.0.2
+pyzmq==26.2.0
+regex==2024.11.6
+requests==2.32.3
+requests-oauthlib==2.0.0
+requests-toolbelt==1.0.0
+retrying==1.3.4
+safetensors==0.4.5
+scikit-learn==1.6.0
+scipy==1.14.1
+sentence-transformers==3.3.1
+setuptools==75.6.0
+simsimd==4.4.0
+six==1.17.0
+sniffio==1.3.1
+soupsieve==2.6
+SQLAlchemy==2.0.36
+stack-data==0.6.3
+starlette==0.41.3
+striprtf==0.0.26
+sympy==1.13.1
+tenacity==8.5.0
+text-generation==0.7.0
+threadpoolctl==3.5.0
+tiktoken==0.8.0
+tokenizers==0.20.3
+torch==2.5.1
+tornado==6.4.2
+tqdm==4.67.1
+traitlets==5.14.3
+transformers==4.46.3
+typing-inspect==0.9.0
+typing_extensions==4.12.2
+tzdata==2024.2
+urllib3==2.3.0
+uvicorn==0.34.0
+validators==0.34.0
+wcwidth==0.2.13
+weaviate-client==4.10.2
+wrapt==1.17.0
+xxhash==3.5.0
+yarl==1.18.3
